# artifact-keeper-cli

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh  sonar-project.properties
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-21-cli-roadmap-design.md  2026-02-21-cli-v05-governance.md  2026-02-21-cli-v06-security-plan.md  2026-02-21-cli-v06-security.md  2026-02-21-cli-v07-federation.md  2026-02-21-cli-v08-admin-analytics-design.md  2026-02-21-cli-v08-admin-analytics.md  2026-02-21-cli-v09-testing-infrastructure-design.md  2026-02-21-cli-v09-testing-infrastructure.md
sdk/: Cargo.toml
sdk/src/: generated_sdk.rs  lib.rs
snap/: snapcraft.yaml
src/: cli.rs  error.rs  main.rs
src/commands/: admin.rs  analytics.rs  approval.rs  artifact.rs  auth.rs  client.rs  completion.rs  config.rs  doctor.rs  dt.rs  group.rs  helpers.rs  instance.rs  label.rs  license.rs  lifecycle.rs  migrate.rs  mod.rs  peer.rs  permission.rs  profile.rs  promotion.rs  quality_gate.rs  repo.rs  sbom.rs  scan.rs  sign.rs  sso.rs  sync_policy.rs  totp.rs  tui.rs  webhook.rs
src/commands/setup/: mod.rs
src/commands/snapshots/: ak__commands__admin__tests__admin_user_list_json.snap  ak__commands__admin__tests__admin_user_list_table.snap  ak__commands__analytics__tests__analytics_summary_json.snap  ak__commands__approval__tests__approval_list_json.snap  ak__commands__approval__tests__approval_list_table.snap  ak__commands__artifact__tests__artifact_list_json.snap  ak__commands__artifact__tests__artifact_list_table.snap  ak__commands__artifact__tests__artifact_search_json.snap  ak__commands__artifact__tests__artifact_search_table.snap  ak__commands__auth__tests__auth_token_list_json.snap  ak__commands__auth__tests__auth_whoami_json.snap  ak__commands__dt__tests__dt_project_list_json.snap  ak__commands__group__tests__group_list_json.snap  ak__commands__group__tests__group_list_table.snap  ak__commands__label__tests__label_list_json.snap  ak__commands__label__tests__label_list_table.snap  ak__commands__license__tests__license_policy_json.snap  ak__commands__lifecycle__tests__lifecycle_list_json.snap  ak__commands__lifecycle__tests__lifecycle_list_table.snap  ak__commands__peer__tests__peer_list_json.snap  ak__commands__permission__tests__permission_list_json.snap  ak__commands__permission__tests__permission_list_table.snap  ak__commands__profile__tests__profile_show_json.snap  ak__commands__promotion__tests__promotion_rule_json.snap  ak__commands__promotion__tests__promotion_rule_table.snap  ak__commands__quality_gate__tests__gate_list_json.snap  ak__commands__quality_gate__tests__gate_list_table.snap  ak__commands__repo__tests__repo_list_json.snap  ak__commands__repo__tests__repo_list_table.snap  ak__commands__repo__tests__repo_show_json.snap  ak__commands__sbom__tests__sbom_list_json.snap  ak__commands__scan__tests__scan_dashboard_json.snap  ak__commands__scan__tests__scan_policy_list_json.snap  ak__commands__sign__tests__sign_key_list_json.snap  ak__commands__sso__tests__sso_ldap_json.snap  ak__commands__sso__tests__sso_oidc_json.snap  ak__commands__sync_policy__tests__sync_policy_list_json.snap  ak__commands__totp__tests__totp_setup_json.snap  ak__commands__webhook__tests__webhook_list_json.snap
src/config/: credentials.rs  instances.rs  mod.rs
src/output/: mod.rs
tests/: docker-compose.yml  e2e_admin.rs  e2e_analytics.rs  e2e_approval.rs  e2e_auth.rs  e2e_config.rs  e2e_dt.rs  e2e_group.rs  e2e_label.rs  e2e_license.rs  e2e_lifecycle.rs  e2e_peer.rs  e2e_permission.rs  e2e_profile.rs  e2e_promotion.rs  e2e_quality_gate.rs  e2e_repo.rs  e2e_sbom.rs  e2e_scan.rs  e2e_sign.rs  e2e_sso.rs  e2e_sync_policy.rs  e2e_totp.rs  e2e_webhook.rs  start-backend.sh  stop-backend.sh
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
