[workspace]
members = ["sdk", "xtask"]

[package]
name = "artifact-keeper-cli"
version = "0.2.0"
edition = "2024"
description = "CLI/TUI tool for Artifact Keeper — an enterprise artifact registry"
license = "MIT"
repository = "https://github.com/artifact-keeper/artifact-keeper-cli"
homepage = "https://artifactkeeper.com"
keywords = ["artifact", "registry", "cli", "package-manager"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85.0"

[[bin]]
name = "ak"
path = "src/main.rs"

[dependencies]
# Generated SDK
artifact-keeper-sdk = { path = "sdk" }

# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
clap_mangen = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (must match progenitor-client's reqwest version)
reqwest = { version = "0.13", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Interactive prompts & terminal
cliclack = "0.3"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
console = "0.15"
comfy-table = "7"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Credential storage
keyring = { version = "3", features = ["apple-native", "linux-native"] }

# Encoding
base64 = "0.22"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
dirs = "6"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
futures = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
