[package]
name = "artifact-keeper-sdk"
version = "0.1.0"
edition = "2024"
description = "Generated Rust SDK for the Artifact Keeper API"
license = "Apache-2.0"
rust-version = "1.85.0"

[dependencies]
progenitor-client = "0.12"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
